Fix succ text alignment

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .success-body {
   display: flex;
   align-items: center;
+  text-align: center;
 }
 
 .success-message {
